gearing up for TKML -> inspired by QML

--- a/lab/pyproject.toml
+++ b/lab/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "k-lab"
-version = "0.0.1"
+name = "klab"
+version = "0.0.2"
 requires-python = ">= 3.12"
 description = "tools for measuring code performance"
 
